# bankDetect

./: CMakeLists.txt  README.md
src/: bankDetect.cpp  bankDetect.h  main.cpp
